--- a/main/res/layout/activity_zalivki_clicker.xml
+++ b/main/res/layout/activity_zalivki_clicker.xml
@@ -15,6 +15,7 @@
         android:text="клац"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.185"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/progressBar2" />
 
@@ -70,8 +71,8 @@
         android:layout_marginTop="102dp"
         android:layout_marginEnd="73dp"
         android:layout_marginBottom="102dp"
+        android:hint="0"
         android:inputType="numberSigned"
-        android:text="0"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/clickerButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,8 +119,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="76dp"
+        android:hint="0"
         android:inputType="numberSigned"
-        android:text="0"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/textView34"
         app:layout_constraintEnd_toEndOf="parent"
@@ -156,8 +157,8 @@
         android:layout_marginTop="67dp"
         android:layout_marginEnd="78dp"
         android:layout_marginBottom="65dp"
+        android:hint="0"
         android:inputType="numberSigned"
-        android:text="0"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/kolformSt4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -190,8 +191,8 @@
         android:layout_height="36dp"
         android:layout_marginEnd="76dp"
         android:layout_marginBottom="24dp"
+        android:hint="0"
         android:inputType="numberSigned"
-        android:text="0"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/kolformSt2"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -243,4 +244,15 @@
         app:layout_constraintEnd_toStartOf="@+id/progressBar2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/kolformSt3" />
+
+    <Button
+        android:id="@+id/saveZal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:text="Сохранить заливки"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/clickerButton"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
